--- a/Lab9/Sun_System.ipynb
+++ b/Lab9/Sun_System.ipynb
@@ -73,7 +73,7 @@
     "-------\n",
     "\n",
     "Для начала тимлид должен **форкнуть репозиторий** к себе на github(т.е. сделать копию в своём аккаунте, кнопка Fork в правом верхнем углу) и **выдать права** на коммит своему подчинённому\n",
-    "программисту (repo->settings->colaborators->add colaborator).\n",
+    "программисту (repo->Settings->Manage Access->Add people).\n",
     "\n",
     "Проект находится в репозитории [solar_project](https://github.com/ealyapina/2016-solar_project).\n",
     "\n",
