--- a/Spring/Lab2/Lab2.ipynb
+++ b/Spring/Lab2/Lab2.ipynb
@@ -286,7 +286,7 @@
     "**Корреляция** — статистическая взаимосвязь двух или более случайных величин (либо величин, которые можно с некоторой допустимой степенью точности считать таковыми). При этом изменения значений одной или нескольких из этих величин сопутствуют систематическому изменению значений другой или других величин.\n",
     "\n",
     "Мера корреляции - коэффициент корреляции\n",
-    "![](correlation.png)"
+    "![](correlation.PNG)"
    ]
   },
   {
