--- a/Spring/Lab3/Lab3.ipynb
+++ b/Spring/Lab3/Lab3.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Несколько примеров использования Numpy\n",
+    "# Несколько примеров использования Numpy (часть 1)\n",
     "\n",
     "1. Письменный экзамен оказался слишком сложным, и преподаватель решил добавить каждому студенту не менее некоторого количества очков, чтобы в итоге было поменьше плохих оценок. Поможем ему пересчитать первичные баллы в итоговые.\n",
     "\n",
