--- a/Spring/Lab5/Lab5.ipynb
+++ b/Spring/Lab5/Lab5.ipynb
@@ -657,12 +657,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Упражнения"
+    "## Упражнения\n",
+    "\n",
+    "Построить графики для Chromo.txt, mutant.txt и wild_type.txt из лабораторной №2. Для Chromo.txt построить только отрезок от 4 до 7 минут."
    ]
   }
  ],
