--- a/Spring/Lab7/Lab7.ipynb
+++ b/Spring/Lab7/Lab7.ipynb
@@ -416,9 +416,9 @@
     "\n",
     "Восемь классов мышей описаны на основе таких характеристик, как генотип, поведение и лечение. Согласно генотипу, мыши могут быть контрольными или трисомными. Согласно поведению, одни мыши были стимулированы к обучению (контекст-шок), а другие нет (шок-контекст), и для того, чтобы оценить эффект препарата мемантин в восстановлении способности к обучению у трисомных мышей, некоторым мышам вводили препарат, а другим нет.\n",
     "</hr>\n",
-    "<hr>\n",
-    "Для датасета miceprotein.csv постройте ящики с усами для уровней экспрессии белков `DYRK1A_N`, `SOD1_N` для каждого класса образцов. ⚠Некоторые данные отсутствуют.\n",
-    "</hr>"
+    "<hr></hr>\n",
+    "\n",
+    "Для датасета miceprotein.csv постройте ящики с усами для уровней экспрессии белков `DYRK1A_N`, `SOD1_N` для каждого класса образцов. ⚠Некоторые данные отсутствуют. Для выбрасывания NaN-значений используйте метод `dropna`.\n"
    ]
   }
  ],
