--- a/Spring/Lab9/Lab9.ipynb
+++ b/Spring/Lab9/Lab9.ipynb
@@ -208,6 +208,73 @@
     "\n",
     "Постройте результаты всех трёх экзаменов на одном графике. Какой экзамен показать цветом, можно выбрать самостоятельно. Можно построить все варианты и выбрать наиболее говорящий."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Дополнительные элементы\n",
+    "\n",
+    "### Вертикальные линии\n",
+    "\n",
+    "    matplotlib.pyplot.vlines(x, ymin, ymax, colors=None, linestyles='solid', label='', *, data=None, **kwargs)\n",
+    "\n",
+    "Рисует вертикальные линии для заданного `x` от `ymin` до `ymax`.\n",
+    "\n",
+    "#### Параметры\n",
+    "\n",
+    "`x` - `float` или array-like\n",
+    "\n",
+    "Абсциссы вертикальных линий.\n",
+    "\n",
+    "`ymin`, `ymax` - `float` или array-like\n",
+    "Начало и конец каждой линии. Если дать одно число в каждый параметр, все линии будут иметь одинаковую длину и положение по Y.\n",
+    "\n",
+    "`colors` - `list` цветов, по умолчанию: `'C0'`\n",
+    "\n",
+    "`linestyles` - `{'solid', 'dashed', 'dashdot', 'dotted'}`, необязательно\n",
+    "\n",
+    "Линия спложная, штриховая, штрихпунктирная, или пунктирная\n",
+    "\n",
+    "`label` - `str`, по умолчанию: `''`\n",
+    "\n",
+    "Подпись.\n",
+    "\n",
+    "### Горизонтальные линии\n",
+    "\n",
+    "    matplotlib.pyplot.hlines(y, xmin, xmax, colors=None, linestyles='solid', label='', *, data=None, **kwargs)\n",
+    "\n",
+    "Работает так же.\n",
+    "\n",
+    "### Стрелки\n",
+    "\n",
+    "    matplotlib.pyplot.arrow(x, y, dx, dy, **kwargs)\n",
+    "\n",
+    "Рисует стрелку из точки $(x, y)$ в точку $(x+dx, y+dy)$\n",
+    "\n",
+    "### Текст\n",
+    "    matplotlib.pyplot.text(x, y, s, fontdict=None, **kwargs)\n",
+    "\n",
+    "Пишет текст `s` в точке $(x, y)$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Упражнение 3\n",
+    "\n",
+    "Постройте график для данных из файла `Chromo.txt` от 4 до 7 минут, покажите стрелкой максимум."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Упражнение 4\n",
+    "\n",
+    "Добавьте вертикальные и горизонтальные линии на значениях `50, 66, 85` на графике из упражнения 2."
+   ]
   }
  ],
  "metadata": {
@@ -239,7 +306,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
